signup module completed

--- a/web/frontend/css/jquery-clockpicker.css
+++ b/web/frontend/css/jquery-clockpicker.css
@@ -144,6 +144,7 @@
   border-right-width: 0;
   border-left-color: #fff;
 }
+/*
 .btn {
   cursor: pointer;
   -webkit-user-select: none;
@@ -199,7 +200,7 @@
 .text-primary {
   color: #428bca;
 }
-
+*/
 /*!
  * ClockPicker v{package.version} for Bootstrap (http://weareoutman.github.io/clockpicker/)
  * Copyright 2014 Wang Shenwei.
