--- a/web/frontend/css/custom.css
+++ b/web/frontend/css/custom.css
@@ -1,1 +1,8 @@
-.custom{color: #ffcc00}
+.bg{
+    background: no-repeat center center fixed   url("../img/bgr2.jpeg")   ;
+ /*   height: 800px;*/
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
