--- a/src/RestoBundle/Resources/views/Ajmenu/resto-menu.html.twig
+++ b/src/RestoBundle/Resources/views/Ajmenu/resto-menu.html.twig
@@ -32,25 +32,22 @@
        {# <div class="row">   <button id="btn-new-menu" class="btn" style="margin: 10px">newmenu</button></div>#}
     <div class="row">
         <div id="new-menu" class="col-md-5 menu-cart  container-fluid new-menu " >
-            <form>
+            <form method="post"action="{{ path('ajouterplat') }}">
          <div class="row">   <div class="menu-info"><button class="no-menu-img" ><i class="fa fa-camera" ></i></button><input class="nom-menu" value="nom categorie " type="text" disabled><button type="button"  class="dropdown-arrow"><i class="fa fa-caret-down " id="new-display-plat"></i><i class="fa fa-caret-up " id="new-hide-plat"></i></button></div></div>
            <div class="row">
                <div class="new-plat">
-                   <form>
-                   <button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat"  placeholder="saisir le nom du plat" ><input class="prix-plat" placeholder="prix"><button class="aj-plat btn"><i class="fa fa-plus"></i></button>
-                   </form>
+
+                   <button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" id="plat0" placeholder="saisir le nom du plat" ><input class="prix-plat" placeholder="prix" id="prix0"><button type="button" class="aj-plat btn" id="btnplus"><i class="fa fa-plus"></i></button>
+
                </div>
            </div>
              <div class="row" id="new-mitems">
-                 {#{% for p in 1..3 %}
-                           <div class="menu-items" id="new-mitems"><div><button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" ><input class="prix-plat" ><button class="del-plat-item btn"><i class="fa fa-trash"></i></button><button class=" mod-plat-item btn"><i class="fa fa-edit"></i></button></div>
-                     </div>
-                 {% endfor %}#}
+
              </div>
           {#   <div class="row"><div class="menu-items" id="mitems"><button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" ><input class="prix-plat" ><button class="del-plat-item btn"><i class="fa fa-trash"></i></button><button class=" mod-plat-item btn"><i class="fa fa-edit"></i></button></div></div>
               <div class="row"><div class="menu-items" id="mitems"><button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" ><input class="prix-plat" ><button class="del-plat-item btn"><i class="fa fa-trash"></i></button><button class=" mod-plat-item btn"><i class="fa fa-edit"></i></button></div></div>
             #}
-        <div class="row"><div class="ajout-menu"><button class="btn ajout-menu-btn"><i class="fa fa-plus"></i><span>Ajouter</span></button></div></div>
+        <div class="row"><div class="ajout-menu"><button class="btn ajout-menu-btn" type="button" id="btnajout-menu-btn"><i class="fa fa-plus"></i><span>Ajouter</span></button></div></div>
             </form>
         </div>
         {% for m in 1..5 %}
@@ -60,7 +57,7 @@
             <div class="row">
                 <div class="new-plat">
                     <form>
-                    <button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" placeholder="saisir le nom du plat" ><input class="prix-plat" placeholder="prix" ><button class="aj-plat btn"><i class="fa fa-plus"></i></button>
+                    <button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" placeholder="saisir le nom du plat" ><input class="prix-plat" placeholder="prix" ><button  type="button" class="aj-plat btn"><i class="fa fa-plus"></i></button>
                     </form>
                 </div>
             </div>
@@ -130,6 +127,71 @@
     {{ parent() }}
 <script src="{{ asset('frontend/js/resto-menu.js') }}" type="text/javascript"></script>
 <script src="{{ asset('frontend/externres/node_modules/@material/dialog/dist/mdc.dialog.js') }}" type="text/javascript"></script>
+<script>
+    $i=0;
+    var nom = [];
+    $('#btnplus').click(function () {
+$i++;
 
+
+        alert('sa7itt'+$i);
+        $( "#new-mitems" ).append( "<div class='menu-items' id='new-mitems'><div><button class='no-plat-img' >" +
+            "<i class='fa fa-camera' ></i></button><input class='nom-plat' id='plat"+$i+"'><input class='prix-plat' id='prix"+$i+"'>" +
+            "<button class='del-plat-item btn'><i class='fa fa-trash'></i></button><button class='mod-plat-item bt'>" +
+            "<i class='fa fa-edit'></i>" +
+            "</button></div>" +
+            "                     </div>" );
+        $i--;
+        nom.push($( "#plat"+$i ).val());
+        $('#hide-plat').hide();
+        $('#display-plat').show();
+        $( "#new-mitems" ).slideDown( "slow" );
+        $.ajax({
+            url:'{{ (path('ajouterplat')) }}',
+            type: "POST",
+            dataType: "json",
+            data: {
+                "etat": "0",
+                "nom_plat": nom,
+                "prix": ""+$( "#prix"+$i ).val()
+
+            },
+            async: true,
+            success: function (data)
+            {
+
+                alert('sa7itt'+$( "#plat"+$i ).val()+$( "#prix"+$i ).val());
+
+$i++;
+
+            }
+        });
+
+    });
+    $('#btnajout-menu-btn').click(function () {
+
+        alert('sa7itt bagraa');
+        nom.push($( "#plat"+$i ).val());
+
+        $.ajax({
+            url:'{{ (path('ajouterplat')) }}',
+            type: "POST",
+            dataType: "json",
+            data: {
+                "etat": "1",
+                "nom_plat": nom,
+                "prix": ""+$( "#prix"+$i ).val()
+
+            },
+            async: true,
+            success: function (data)
+            {
+                alert('gooooooooooo');
+
+            }
+        });
+
+    });
+</script>
 
 {% endblock %}
