--- a/src/RestoBundle/Resources/views/InsR/insr.html.twig
+++ b/src/RestoBundle/Resources/views/InsR/insr.html.twig
@@ -21,17 +21,32 @@
         </div>
         <div class="insform col-md-4 ">
             <p class="instextdescription institle">Inscription</p>
-            <form  method="post" action="{{ path('resto_insr_insr') }}" >
-                <input type="hidden" name="nomrval" id="nomr">
-                <input type="hidden" name="adrrval" id="adrr">
-                <input type="hidden" name="telrval" id="telr">
-                <input type="hidden" name="typerval" id="typer">
-                <input type="hidden" name="ouvrval" id="ouvr">
-                <input type="hidden" name="fermrval" id="fermr">
-                <input type="hidden" name="langrval" id="langr">
-                <input type="hidden" name="latrval" id="latr">
-                <input type="hidden" name="idrval" id="idr">
-                <input type="hidden" name="idplacerval" id="idplacer">
+                {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+            {{ form_widget(form.username,{ 'attr': {'class': 'nomr'}}) }}
+            {{ form_widget(form.nomresto,{ 'attr': {'class': 'nomr'}}) }}
+            {{ form_widget(form.description,{ 'attr': {'class': 'desc'}}) }}
+
+            {{ form_widget(form.adresseresto, { 'attr': {'class': 'adrr'} }) }}
+            {{ form_widget(form.tel, { 'attr': {'class': 'telr'}}) }}
+            {{ form_widget(form.typeresto, { 'attr': {'class': 'typer'}}) }}
+            {{ form_widget(form.ouverture, { 'attr': {'class': 'ouvr'}}) }}
+            {{ form_widget(form.fermeture, { 'attr': {'class': 'fermr'}}) }}
+            {{ form_widget(form.lngresto, { 'attr': {'class': 'langr'}}) }}
+            {{ form_widget(form.ltdresto, { 'attr': {'class': 'latr'}}) }}
+            {{ form_widget(form.idPlaceResto, { 'attr': {'class': 'idplacer'}}) }}
+            {{ form_widget(form.ribresto, { 'attr': {'class': 'ribresto'}}) }}
+
+
+            <!-- <input type="hidden" name="nomrval" id="nomr">
+                 <input type="hidden" name="adrrval" id="adrr">
+                 <input type="hidden" name="telrval" id="telr">
+                 <input type="hidden" name="typerval" id="typer">
+                 <input type="hidden" name="ouvrval" id="ouvr">
+                 <input type="hidden" name="fermrval" id="fermr">
+                 <input type="hidden" name="langrval" id="langr">
+                 <input type="hidden" name="latrval" id="latr">
+                 <input type="hidden" name="idrval" id="idr">
+                 <input type="hidden" name="idplacerval" id="idplacer">  -->
 
                 <div id="blockmap" class="container">
                  <div class="blocksteps "><div class="circleShape">1</div><span class="stepstext">Choisir l'emplacement de votre resturant</span></div>
@@ -62,6 +77,7 @@
 
                    <input class="inom" id="nom" placeholder="nom de restaurant" type="text"  disabled>
                    <input class="iadr"  id="adr" type="text" placeholder="adresse de restaurant" disabled>
+
                </div>
           {#     <button type="button" id="nextb" class="btn nextbtn"><span style="margin-right: 10px">Continuer</span><i class="fas fa-chevron-right"></i></button>
             #}
@@ -74,6 +90,7 @@
 
                             <label class="labelinfo"><img src="{{ asset('frontend/img/restoicon.png') }}" ><span>nom de restaurant</span> <input class="iinfo noms2" id="nomstep2"  type="text"  disabled> </label>
                             <label class="labelinfo"><img src="{{ asset('frontend/img/locicon.png') }}" ><span>adresse de restaurant</span> <input class="iinfo adrs2" id="adrstep2" type="text"  disabled> </label>
+                            <label class="labelinfo"><span></span> Description<input class="iinfo" id="description" type="text" placeholder="description" > </label>
 
                             <label class="labelinfo"><img src="{{ asset('frontend/img/mobicon.png') }}" ><span>numero Telphone</span> <input class="iinfo" id="tel" type="number"  class="form-control" value=""> </label>
 
@@ -110,9 +127,9 @@
 
                         <div class="infoiutput" style="width: 100%">
 
-                            <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/mail.png') }}" ><span>E-mail</span> <input class="iinfo" id="email"  type="email"  > </label>
-                            <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/password.png') }}" ><span>Mot de pass</span> <input class="iinfo " id="mdp" type="password"  > </label>
-                            <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/password.png') }}" ><span>Confirmer mot de pass</span> <input class="iinfo" id="mdp2" type="password"  class="form-control" > </label>
+                            <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/mail.png') }}" ><span>E-mail</span>{{ form_widget(form.email, { 'attr': {'class': 'iinfo'}}) }}
+                            </label>
+                            <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/password.png') }}" ><span>Mot de pass</span>  {{ form_widget(form.plainPassword, { 'attr': {'class': 'iinfo'}}) }}</label>
                             <label class="labelinfo labelconf"><img src="{{ asset('frontend/img/rib.png') }}" ><span>Rib</span> <input class="iinfo" id="rib" type="number"  class="form-control" > </label>
 
 
@@ -126,9 +143,10 @@
                     <div class="blockbtns ">
                         <button type="button" id="nextb" class="btn nextbtn"><span style="margin-right: 10px">Continuer</span><i class="fas fa-chevron-right"></i></button>
                         <button type="button" id="backb" class="btn backbtn"><i class="fas fa-chevron-left"></i><span style="margin-left: 10px">Retour</span></button>
-                        <button type="submit" id="confb" class="btn confbtn"><span style="margin-right: 10px">Terminer</span><i class="fas fa-check"></i></button>
+                        <button type="submit" id="confb" class="btn confbtn" value="{{ 'registration.submit'|trans }}" ><span style="margin-right: 10px">Terminer</span><i class="fas fa-check"></i></button>
                     </div>
-            </form>
+
+            {{ form_end(form) }}
         </div>
     </div>
 
