--- a/app/Resources/views/template/dashboardTheme.html.twig
+++ b/app/Resources/views/template/dashboardTheme.html.twig
@@ -30,7 +30,7 @@
 
 {% block javascripts %}
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="{{ asset('frontend/js/jquery-3.3.1.min.js') }}" ></script>
     <script src="{{ asset('frontend/js/common_scripts_min.js') }}"></script>
     <script src="{{ asset('frontend/js/functions.js') }}"></script>
 
