--- a/app/Resources/views/template/leftside.html.twig
+++ b/app/Resources/views/template/leftside.html.twig
@@ -30,7 +30,7 @@
 
         </li>
         <li class="menu-item-has-children dropdown">
-            <a href="#"  class="dropdown-toggle labelinfo"><img src="{{ asset('frontend/img/user.png') }}" ><span>Profile</span> </a>
+            <a href="{{ path('profile') }}"  class="dropdown-toggle labelinfo"><img src="{{ asset('frontend/img/user.png') }}" ><span>Profile</span> </a>
 
         </li>
   <li class="menu-item-has-children dropdown">
