--- a/src/RestoBundle/Resources/views/Ajmenu/resto-menu.html.twig
+++ b/src/RestoBundle/Resources/views/Ajmenu/resto-menu.html.twig
@@ -33,7 +33,7 @@
     <div class="row">
         <div id="new-menu" class="col-md-5 menu-cart  container-fluid new-menu " >
             <form method="post"action="{{ path('ajouterplat') }}">
-         <div class="row">   <div class="menu-info"><button class="no-menu-img" ><i class="fa fa-camera" ></i></button><input class="nom-menu" value="nom categorie " type="text" disabled><button type="button"  class="dropdown-arrow"><i class="fa fa-caret-down " id="new-display-plat"></i><i class="fa fa-caret-up " id="new-hide-plat"></i></button></div></div>
+         <div class="row">   <div class="menu-info"><button class="no-menu-img" ><i class="fa fa-camera" ></i></button><input class="nom-menu" placeholder="nom categorie" type="text" style="background-color: white" id="cat" ><button type="button"  class="dropdown-arrow"><i class="fa fa-caret-down " id="new-display-plat"></i><i class="fa fa-caret-up " id="new-hide-plat"></i></button></div></div>
            <div class="row">
                <div class="new-plat">
 
@@ -50,23 +50,34 @@
         <div class="row"><div class="ajout-menu"><button class="btn ajout-menu-btn" type="button" id="btnajout-menu-btn"><i class="fa fa-plus"></i><span>Ajouter</span></button></div></div>
             </form>
         </div>
-        {% for m in 1..5 %}
+        {% for lplat in plats %}
         <div class="col-md-5 menu-cart container-fluid"  >
             <form>
-         <div class="row">   <div class="menu-info"><button class="menu-img"style="background: url('{{ asset('frontend/img/pizza.jpeg') }}') no-repeat;background-size: 100% 100%;" ><i class="fa fa-camera" ></i></button><input class="nom-menu" value="Pizza" type="text" disabled><button type="button"  class="dropdown-arrow"><i class="fa fa-caret-down " id="display-plat"></i><i class="fa fa-caret-up " id="hide-plat"></i></button></div></div>
+         <div class="row">
+             <div class="menu-info"><button class="menu-img"style="background: url('{{ asset('frontend/img/pizza.jpeg') }}') no-repeat;background-size: 100% 100%;" >
+                     <i class="fa fa-camera" ></i>
+                 </button><input class="nom-menu" value="{{ lplat[0].getIdCat().getNomCat() }}" type="text" disabled>
+                 <button type="button"  class="dropdown-arrow">
+                     <i class="fa fa-caret-down" id="display-plat{{ lplat[0].getIdCat().getIdCat() }}"onclick="showspe('{{ lplat[0].getIdCat().getIdCat() }}')" ></i>
+                     <i class="fa fa-caret-up" id="hide-plat{{ lplat[0].getIdCat().getIdCat() }}" onclick="hidespe('{{ lplat[0].getIdCat().getIdCat() }}')"></i></button></div></div>
             <div class="row">
                 <div class="new-plat">
                     <form>
-                    <button class="no-plat-img" ><i class="fa fa-camera" ></i></button><input class="nom-plat" placeholder="saisir le nom du plat" ><input class="prix-plat" placeholder="prix" ><button  type="button" class="aj-plat btn"><i class="fa fa-plus"></i></button>
+
+                        <input type="button"  style="width: 48px; height: 35px; background: url('{{ asset('frontend/img/photocamera-add.png') }}')" id="new_btn{{ lplat[0].getIdCat().getIdCat() }}" onclick="addimage('{{ lplat[0].getIdCat().getIdCat() }}')" ><input type="file"  style="display: none" name="img_btn{{ lplat[0].getIdCat().getIdCat() }}" id="img_btn{{ lplat[0].getIdCat().getIdCat() }}" ></input><input class="nom-plat" placeholder="saisir le nom du plat" id="nom{{ lplat[0].getIdCat().getIdCat() }}" ><input class="prix-plat" placeholder="prix" id="prix{{ lplat[0].getIdCat().getIdCat() }}" ><button  type="button" class="aj-plat btn" onclick="addsingleplat('{{ lplat[0].getIdCat().getIdCat() }}')"><i class="fa fa-plus"></i></button>
+
                     </form>
                 </div>
             </div>
-            <div class="row" id="mitems">
-                {% for p in 1..3 %}
-                <div class="menu-items" >
-                    <form>
-                    <button class="plat-img" style="background: url('{{ asset('frontend/img/pizza.jpeg') }}') no-repeat;background-size: 100% 100%;" ><i class="fa fa-camera" ></i></button><input class="nom-plat"  value="Pizza margeritte"><input class="prix-plat"  value="2000"><button class="del-plat-item btn"><i class="fa fa-trash"></i></button><button class=" mod-plat-item btn"><i class="fa fa-edit"></i></button>
-                    </form>
+            <div class="row" id="mitems{{ lplat[0].getIdCat().getIdCat() }}"style="display: none">
+                {% for p in lplat %}
+                <div class="menu-items" id="{{ p.idPlat }}">
+
+                    <button class="plat-img" style="background: url('../../../../imgjdid/{{ p.imageplat }}') no-repeat;background-size: 100% 100%;" ><i class="fa fa-camera" ></i></button>
+                        <input class="nom-plat"  value="{{ p.nomPlat }}" id="nomplat{{ p.idPlat }}">
+                        <input class="prix-plat"  value="{{ p.prixPlat }}" id="prixplat{{ p.idPlat }}">
+                        <button class="del-plat-item btn" onclick="removemenu({{ p.idPlat }})"><i class="fa fa-trash"></i>
+                        </button><button class=" mod-plat-item btn" onclick="updatemenu({{ p.idPlat }})" ><i class="fa fa-edit"></i></button>
                 </div>
                 {% endfor %}
             </div>
@@ -128,6 +139,107 @@
 <script src="{{ asset('frontend/js/resto-menu.js') }}" type="text/javascript"></script>
 <script src="{{ asset('frontend/externres/node_modules/@material/dialog/dist/mdc.dialog.js') }}" type="text/javascript"></script>
 <script>
+
+    function addimage(display) {
+
+        $('#img_btn'+display).click();
+
+        $('#img_btn'+display).on("change", function(){ $('#new_btn'+display).css("background-image", "url('"+$('#img_btn'+display).data()+"')")
+
+
+
+            // var inputFile = document.getElementById("img_btn"+display);
+            //var file = inputFile.files[0];
+            //alert(""+$('#img_btn'+display).val())
+            });
+
+
+    }
+
+
+    /************* addsingle plat *********************/
+    function addsingleplat(display) {
+        var inputFile = document.getElementById("img_btn"+display);
+        var file = inputFile.files[0];
+        var data = new FormData();
+        data.append('image', file, file.name);
+        data.append('nom',''+$( "#nom"+display ).val());
+        data.append('prix',''+$( "#prix"+display ).val());
+        data.append('id',''+display);
+        $.ajax({
+            url:'{{ (path('ajoutersingleplat')) }}',
+            type: "POST",
+            data: data
+            /*{
+                "nom_plat": ""+$( "#nom"+display ).val(),
+                "prix": ""+$( "#prix"+display ).val(),
+                "idcategorie":""+display,
+                "image":$("#img_btn"+display).next()
+            }*/,
+            processData: false,
+            contentType: false,
+            cache: false,
+            success: function (data)
+            {alert(""+$("#img_btn"+display).next().val());
+                $.each(data, function (k, el) {
+                    alert(""+el.toString());
+                    $('#mitems'+display).append(
+                    '<div class="menu-items" >'+
+                       ' <form>'+
+                        '<button class="plat-img" style="background: url('+'../../../../../../imgjdid/'+file.name+') no-repeat;background-size: 100% 100%;" ><i class="fa fa-camera" ></i></button>'+
+                    '<input class="nom-plat"  value="'+$( "#nom"+display ).val()+'">'+
+                        '<input class="prix-plat"  value="'+$( "#prix"+display ).val()+'" >'+
+                        '<button class="del-plat-item btn"><i class="fa fa-trash"></i>'+
+                       ' </button><button class=" mod-plat-item btn"><i class="fa fa-edit"></i></button>'+
+                        '</form>'+
+                        '</div>'
+                    );
+
+                });
+
+            }
+        });    }
+
+    function removemenu(display) {
+        var data = new FormData();
+        data.append('id',''+display);
+        $.ajax({
+            url:'{{ (path('removeplat')) }}',
+            type: "POST",
+            data: data,
+            processData: false,
+            contentType: false,
+            cache: false,
+            success: function (data)
+            {
+                $("#"+display).remove();
+            }
+        });
+
+
+    }
+    function updatemenu(display) {
+        var data = new FormData();
+        data.append('nom',''+$( "#nomplat"+display ).val());
+        data.append('prix',''+$( "#prixplat"+display ).val());
+        data.append('id',''+display);
+
+        $.ajax({
+            url:'{{ (path('updateplat')) }}',
+            type: "POST",
+            data: data,
+            processData: false,
+            contentType: false,
+            cache: false,
+            success: function (data)
+            {
+alert('update success');
+            }
+        });
+
+
+    }
+
     $i=0;
     var nom = [];
     $('#btnplus').click(function () {
@@ -136,13 +248,16 @@ $i++;
 
         alert('sa7itt'+$i);
         $( "#new-mitems" ).append( "<div class='menu-items' id='new-mitems'><div><button class='no-plat-img' >" +
-            "<i class='fa fa-camera' ></i></button><input class='nom-plat' id='plat"+$i+"'><input class='prix-plat' id='prix"+$i+"'>" +
+            "<i class='fa fa-camera' ></i></button><input class='nom-plat' id='plat"+$i+"' value='"+$( "#plat0").val()+"'><input class='prix-plat' id='prix"+$i+"' value='"+$("#prix0" ).val()+"'>" +
             "<button class='del-plat-item btn'><i class='fa fa-trash'></i></button><button class='mod-plat-item bt'>" +
             "<i class='fa fa-edit'></i>" +
             "</button></div>" +
             "                     </div>" );
-        $i--;
+
         nom.push($( "#plat"+$i ).val());
+        $( "#plat0" ).val("");
+        $( "#prix0" ).val("");
+
         $('#hide-plat').hide();
         $('#display-plat').show();
         $( "#new-mitems" ).slideDown( "slow" );
@@ -170,8 +285,7 @@ $i++;
     });
     $('#btnajout-menu-btn').click(function () {
 
-        alert('sa7itt bagraa');
-        nom.push($( "#plat"+$i ).val());
+
 
         $.ajax({
             url:'{{ (path('ajouterplat')) }}',
@@ -180,6 +294,7 @@ $i++;
             data: {
                 "etat": "1",
                 "nom_plat": nom,
+                "nom_cat": ""+$( "#cat").val(),
                 "prix": ""+$( "#prix"+$i ).val()
 
             },
